packaging changed from pom to jar

--- a/laf-root/pom.xml
+++ b/laf-root/pom.xml
@@ -31,7 +31,7 @@
   <modules>
     <module>laf-model</module>
     <module>laf-parsers</module>
-    <module>laf-dao</module>
+    <module>laf-persist</module>
     <module>laf-restapi</module>
   </modules>
   
