--- a/laf-root/laf-parsers/pom.xml
+++ b/laf-root/laf-parsers/pom.xml
@@ -11,7 +11,7 @@
   <groupId>org.b2m.lostandfound</groupId>
   <artifactId>laf-parsers</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <name>laf-parsers</name>
   <url>http://maven.apache.org</url>
