--- a/laf-root/laf-parsers/laf-parserkrk/pom.xml
+++ b/laf-root/laf-parsers/laf-parserkrk/pom.xml
@@ -21,7 +21,13 @@
   </properties>
   
   <dependencies>
-    
+    <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>2.0.8</version>
+    </dependency>
+
   </dependencies>
   
 </project>
