--- a/laf-root/laf-parsers/pom.xml
+++ b/laf-root/laf-parsers/pom.xml
@@ -11,7 +11,7 @@
   <groupId>org.b2m.lostandfound</groupId>
   <artifactId>laf-parsers</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>laf-parsers</name>
   <url>http://maven.apache.org</url>
@@ -31,6 +31,7 @@
     <module>laf-parserwaw</module>
     <module>laf-parserkrk</module>
     <module>laf-parsergd</module>
+    <module>laf-parsers-all</module>
   </modules>
   
 </project>
